# TransitOps

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE.md  ML_AI.md  README.md  RELEASE.md  TASK.md  TESTING.md  UI_UX.md  package-lock.json  package.json
backend/: conftest.py  install_deps.py  main.py  pyproject.toml  run_server.py  transitops.db
backend/ai/: models.py  routes.py  service.py
backend/analytics/: routes.py  service.py
backend/auth/: models.py  routes.py  service.py
backend/auth/tests/: test_auth.py
backend/core/: config.py  responses.py
backend/dashboard/: routes.py  service.py
backend/database/: connection.py  models.py
backend/drivers/: models.py  routes.py  service.py
backend/email_service/: models.py  routes.py  service.py
backend/expenses/: models.py  routes.py  service.py
backend/fuel/: models.py  routes.py  service.py
backend/maintenance/: models.py  routes.py  service.py
backend/ml/: models.py  routes.py  service.py
backend/notifications/: models.py  routes.py  service.py
backend/scripts/: generate_demo_data.py  seed_database.py
backend/search/: routes.py  service.py
backend/tests/: test_new_features.py
backend/tracking/: models.py  routes.py  service.py
backend/trips/: models.py  routes.py  service.py
backend/trips/tests/: test_trips.py
backend/vehicles/: models.py  routes.py  service.py
backend/vehicles/tests/: test_vehicles.py
frontend/: customer-tracking.html  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
(+33 files in other folders)
